Arreglo del archivo Plugin YML.
Se añaden los comandos y sus aliases al archivo del plugin.

--- a/SimpleDateCountDown/plugin.yml
+++ b/SimpleDateCountDown/plugin.yml
@@ -3,3 +3,5 @@ version: 1.0.1
 name: SimpleDateCountdown
 api-version: 1.15
 author: Ardila, XavierKrostya
+simpledatecountdown: Comando principal de SimpleDateCountdown
+	aliases: [sdc, countdown]
